Generator/Tests/NeedleFrameworkTests/Fixtures/InvalidInits/InvalidInits4.swift
class DAnotherParentComponent: Component<EmptyDependency> {

    func invalid(self2: Parent) -> MyComp6onent6 {
        return MyComp6onent6   (  parent   :    self2)
    }
}
